--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,10 @@ cmake_minimum_required( VERSION 3.0 )
 project( PROJET_GL )
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra" )
 
-add_executable(main.out main.cpp)
+find_package( PkgConfig REQUIRED )
+pkg_check_modules( PKG REQUIRED libglog)
+include_directories( ${PKG_INCLUDE_DIRS} )
+
+add_executable(main.out src/main.cpp)
+
+target_link_libraries( main.out ${PKG_LIBRARIES} )
